2004-01-16  Rodrigo Moya <rodrigo@ximian.com>

	* gui/tasks-component.[ch]
	(tasks_component_peek_activity_handler): new function.
	(impl_createControls): create a task bar also for the tasks
	component. We can't rely on the calendar component's one.
	(tasks_component_init): create the private activity handler.

	* gui/e-calendar-table.c (e_calendar_table_set_status_message):
	use the tasks component's activity handler.

	* gui/e-tasks.c (on_url_cb): new callback to display status
	bar messages when mousing over links.
	(setup_widgets): connect to "on_url" signal on the HTML widget.

2004-01-15  Rodrigo Moya <rodrigo@ximian.com>

	* gui/dialogs/comp-editor.c: reverted my changes made on Jan 8th.

2004-01-15  Rodrigo Moya <rodrigo@ximian.com>

	* gui/alarm-notify/save.[ch]: removed.

	* gui/alarm-notify/Makefile.am: removed save.[ch].

	* gui/alarm-notify/notify-main.c: removed obsolete headers.

	* gui/alarm-notify/config-data.[ch]
	(config_data_set_last_notification_time,
	config_data_get_last_notification_time,
	config_data_save_blessed_program, config_data_is_blessed_program):
	new functions.

	* gui/alarm-notify/alarm-queue.c: dont use removed functions.
	(alarm_trigger_cb, procedure_notification_dialog,
	alarm_queue_init):
	use config_data_* functions.
	
	* gui/alarm-notify/alarm-notify.c: dont use removed functions.

2004-01-15  JP Rosevear <jpr@ximian.com>

	* gui/tasks-component.h: update protos
	
	* gui/tasks-component.c (impl_finalize): free base dir
	(impl_upgradeFromVersion): just call migrate_tasks
	(tasks_component_init): set base dir value
	(tasks_component_peek_base_directory): accessor
	(tasks_component_peek_source_list): ditto

	* gui/migration.c (process_old_dir): look for a source with the
	name and fallback to creating it
	(create_calendar_contact_source): create the contacts:// source
	(create_calendar_sources): use above and create all the necessary
	sources
	(create_task_sources): create all the necessary sources